# crashTest

./: .env  .env.dev  .env.example  .env.production  .gitignore  GIFT_AUTOMATION_SETUP.md  INTEGRATION_SUMMARY.md  NEW_GIFT_FLOW.md  PROMO_CODES_README.md  PlayerActivity.json  QUICK_START_GIFTS.md  README.md  channel_migration.sql  crash_simulator_new.py  database_schema.sql  docker-compose.dev.yml  docker-compose.yml  fix_user_stats_oneline.sql  fix_user_stats_trigger.sql  grafana_setup.md  loki-config.yml  nginx-dev.conf  nginx.conf  pgbouncer.ini  pgweb.md  prometheus.yml  promo_codes_migration.sql  promtail-config.yml  test_promo_codes.sql  update_gifts_images.sql  userlist.txt
backend/: Dockerfile  GAME_CONFIG_README.md  alembic.ini  create_partitions.py  database.py  logging_config.py  main.py  migration_service.py  models.py  monitor_service.py  performance.py  requirements.txt  security_monitor.py
frontend/: .dockerignore  .gitignore  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite-env.d.ts  vite.config.dev.ts  vite.config.ts
gift-sender/: .env.example  Dockerfile  README.md  docker-compose.yml  get_business_connection.py  gift_sender.py  remote_config.example.sh  remote_run_gift_sender.sh  requirements.txt  run_gift_sender.sh
health-exporter/: Dockerfile  README.md  app.py
session-generator/: Dockerfile  README.md  crash.session  docker-run.sh  (+2 more)
userbot-gifter/: .env  Dockerfile  README.md  main.py  pyproject.toml
userbot-gifter/sessions/: userbot_session.session
userbot-gifter/userbot_gifter/: app.py  slug_mapping.py
(+80 files in other folders)
